src/other/mico-2.3.12/test/idl/error/expected-stderr-case16.idl
case16.idl:7: scoped name 'c1' is not an IDLType
